--- a/client/src/styles/WelcomeMessage.scss
+++ b/client/src/styles/WelcomeMessage.scss
@@ -1,6 +1,7 @@
 @import 'globals';
 
 .welcome-message {
+	display: block;
 	transition: opacity 500ms;
 	span {
 		color: $accent-color;
