--- a/client/src/styles/_globals.scss
+++ b/client/src/styles/_globals.scss
@@ -5,12 +5,12 @@ $white: #fafafa;
 $error-red: #f00000;
 
 // Breakpoints
-$bp-small: 350px;
-$bp-medium: 500px;
+$bp-small: 400px;
+$bp-medium: 520px;
 $bp-large: 700px;
 
 // Sizes
-$nav-height: 70px;
+$nav-height: 75px;
 $aside-width: 300px;
 $content-width: 500px;
 
